[package]
name = "configulator-derive"
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "Derive macro for configulator"
repository = "https://github.com/USA-RedDragon/configulator-rs"
categories = ["config"]
keywords = ["config", "configuration", "derive", "macro"]
readme = "README.md"
exclude = [".github/", "target/"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
