[package]
name = "configulator-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "A configuration loader that populates a struct from YAML files, environment variables, and CLI flags"
repository = "https://github.com/USA-RedDragon/configulator-rs"
categories = ["config"]
keywords = ["config", "configuration", "cli", "environment", "yaml"]
readme = "../README.md"
exclude = [".github/", "target/"]

[lib]
name = "configulator"

[features]
default = ["file", "cli", "env"]
file = ["dep:serde_yaml_ng"]
cli = ["dep:clap"]
env = []

[dependencies]
configulator-derive = { version = "0.1.0", path = "../configulator-derive" }
serde_yaml_ng = { version = "0.10", optional = true }
clap = { version = "4", features = ["string"], optional = true }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "basic"
required-features = ["file", "cli", "env"]

[[example]]
name = "advanced"
required-features = ["file", "cli", "env"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
