[package]
name = "configulator-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "A configuration loader that populates a struct from config files, environment variables, and CLI flags"
repository = "https://github.com/USA-RedDragon/configulator-rs"
categories = ["config"]
keywords = ["config", "configuration", "cli", "environment", "file"]
readme = "../README.md"
exclude = [".github/", "target/"]

[lib]
name = "configulator"

[features]
default = ["file", "cli", "env"]
file = ["dep:serde"]
cli = ["dep:clap"]
env = []
testing = ["cli"]

[dependencies]
configulator-derive = { version = "0.1.2", path = "../configulator-derive" }
clap = { version = "4", features = ["string"], optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
configulator-rs = { path = ".", features = ["testing"] }
tempfile = "3"
serde_yaml_ng = "0.10"

[[example]]
name = "basic"
required-features = ["file", "cli", "env"]

[[example]]
name = "advanced"
required-features = ["file", "cli", "env"]

[package.metadata.docs.rs]
features = ["file", "cli", "env"]
rustdoc-args = ["--cfg", "docsrs"]
